--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ div.summary-price-row div{
 .square {
     width: 100%;
     padding-bottom: 100%;
+    -webkit-background-size: cover;
     background-size: cover;
     background-position: center;
 }
@@ -95,6 +96,7 @@ div.summary-price-row div{
     width: 45px;
     height: 45px;
     padding: 2px;
+    -webkit-background-size: cover;
     background-size: cover;
     background-repeat: no-repeat;
     margin: 3px;
@@ -137,43 +139,39 @@ div.summary-price-row div{
 }
 
 .input-sm{
-    -webkit-border-radius: 0 !important;
-    -moz-border-radius: 0 !important;
     border-radius: 0 !important;
+}
+
+div.start-content{
+    position: absolute;
+    float: left;
+    top: 80%;
+    left: 50%;
+    z-index: 25;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
 }
 
 button.btn-star{
     background-color: #b3d646;
     color: white;
-    position: absolute;
     text-align: center;
-}
-
-.btn-star{
-    position: absolute;
-    top: 85%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    background-color: #555;
-    color: white;
     font-size: 16px;
     padding: 12px 24px;
     border: none;
     cursor: pointer;
     border-radius: 5px;
-    text-align: center;
 }
 
 .configurator-start-text{
     color: white;
-    position: absolute;
-    top: 75%;
-    left: 50%;
-    z-index: 25;
-    transform: translate(-50%, -50%)
 }
 
 div.owl-nav{
     margin-left: -30px;
+}
+
+div#configurator-start-view{
+    position: relative;
 }
