--- a/style.css
+++ b/style.css
@@ -15,6 +15,13 @@ div.price-info{
     padding-left: 10%;
 }
 
+div.example-visualization-info{
+    margin: 0;
+    padding: 10px;
+    text-align: center;
+    float:left;
+}
+
 .node-price{
     font-size: 20px;
     font-weight: 400;
