--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@ div.price-info{
 
 div.example-visualization-info{
     margin: 0;
-    padding: 10px;
-    text-align: center;
-    float:left;
+    padding: 45% 10px 10px;
+    font-size: 10px;
+    color: #737477;
 }
 
 .node-price{
