--- a/style.css
+++ b/style.css
@@ -211,6 +211,9 @@ select.configurator-select{
 }
 
 .configurator{
-    min-width: 900px;
+    min-width: 900px !important;
 }
 
+.configurator-base-carousel .owl-item{
+    max-width: 180px !important;
+}
