--- a/style.css
+++ b/style.css
@@ -15,11 +15,12 @@ div.price-info{
     padding-left: 10%;
 }
 
-div.example-visualization-info{
-    margin: 0;
-    padding: 45% 10px 10px;
+div#example-visualization-info{
+    margin-top: -30px;
+    margin-left: 15px;
     font-size: 10px;
     color: #737477;
+    position: absolute;
 }
 
 .node-price{
