--- a/style.css
+++ b/style.css
@@ -202,6 +202,16 @@ select.configurator-select{
     border-radius: 0 !important;
 }
 
+.select2-container--default .select2-selection--single .select2-selection__rendered{
+    color: #9e9e9e;
+    font-weight: 400;
+}
+
+.select2-results {
+    color: #9e9e9e;
+    font-weight: 400;
+}
+
 #skip-step{
     color:#b2d53a;
     text-transform: uppercase;
