--- a/style.css
+++ b/style.css
@@ -62,10 +62,12 @@ div#example-visualization-info{
 
 .carousel-box {
     border: 1px solid #bcb3aa;
+    width: 146px;
 }
 
 .carousel-box-selected {
     border: 2px solid #337abd;
+    width: 146px;
 }
 
 .color-selected {
