--- a/style.css
+++ b/style.css
@@ -196,13 +196,23 @@ button.btn-star{
     cursor: pointer;
     border-radius: 5px;
     position: relative;
-    top:90%;
+}
+
+.fabric_group_1{
+    text-align: right;
+}
+.fabric_group_2{
+    text-align: left;
+}
+.next-step-div{
+    text-align: right;
 }
 
 @media (max-width: 767px) {
     .btn-star {
         display: block;
-        width: 90%;
+        width: 65%;
+        margin-top: 25px;
         margin-left: auto;
         margin-right: auto;
     }
@@ -214,12 +224,38 @@ button.btn-star{
     div#example-visualization-info{
         bottom: 8px;
     }
+
+    .configurator-left {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+
+    .configurator-left h5 {
+        font-size: 15px;
+    }
+    .configurator-price {
+        font-size: 25px;
+    }
+    .fabric_group_1{
+        text-align: left;
+    }
+    .img_tkan {
+        width: 65px;
+        height: 65px;
+    }
+    .next-step-div, .previous-step-div{
+        text-align: center;
+    }
+    .summary-element-name{
+        text-align: center;
+    }
 }
 
 .configurator-start-text{
     position: relative;
     color: white;
     top:80%;
+    margin-bottom: 15px;
 }
 
 div.owl-nav{
@@ -228,7 +264,7 @@ div.owl-nav{
 
 div#configurator-start-view{
     position: absolute;
-    bottom: 15%;
+    bottom: 10%;
     margin-left: auto;
     margin-right: auto;
     width: 100%;
