--- a/style.css
+++ b/style.css
@@ -326,7 +326,8 @@ button#reload{
 #start-img{
     position: relative;
     height: 100%;
-    background: url("img/konfigurator_start.jpg") no-repeat center;
+    /*background: url("img/konfigurator_start.jpg") no-repeat center;*/
+    background: url("img/01_BANNER_NA_KONFIGURATOR.png") no-repeat center;
     background-size: cover;
 }
 
@@ -358,4 +359,9 @@ body, html {
 
 .line-through {
     text-decoration: line-through;
+}
+.before-discount-price{
+    text-decoration: line-through;
+    font-size: 10px;
+
 }
