--- a/style.css
+++ b/style.css
@@ -33,6 +33,14 @@ div#example-visualization-info{
     position: absolute;
 }
 
+div.color {
+    width: 45px;
+    height: 26px;
+    text-align: center;
+    padding: 2px;
+    margin: 3px;
+}
+
 .node-price{
     font-size: 20px;
     font-weight: 400;
@@ -326,8 +334,8 @@ button#reload{
 #start-img{
     position: relative;
     height: 100%;
-    /*background: url("img/konfigurator_start.jpg") no-repeat center;*/
-    background: url("img/01_BANNER_NA_KONFIGURATOR.png") no-repeat center;
+    background: url("img/konfigurator_start.jpg") no-repeat center;
+    /*background: url("img/01_BANNER_NA_KONFIGURATOR.png") no-repeat center;*/
     /*background: url("img/01_BANNER_NA_KONFIGURATOR.webp") no-repeat center;*/
     background-size: cover;
 }
