--- a/style.css
+++ b/style.css
@@ -390,7 +390,8 @@ body, html {
 
 .extra-text{
     margin-top: -10px;
-    font-size: 0.8rem;
+    font-size: 1.2rem;
+    color: red;
 }
 
 .extra-text-summary{
