--- a/style.css
+++ b/style.css
@@ -334,7 +334,7 @@ button#reload{
 #start-img{
     position: relative;
     height: 100%;
-    background: url("img/konfigurator_start.jpg") no-repeat center;
+    background: url("img/konfigurator_start_danish.jpg") no-repeat center;
     /*background: url("img/01_BANNER_NA_KONFIGURATOR.png") no-repeat center;*/
     /*background: url("img/01_BANNER_NA_KONFIGURATOR.webp") no-repeat center;*/
     background-size: cover;
